FIX: 접수 상태 기반 목록 조회